--- a/styles.css
+++ b/styles.css
@@ -1,129 +1,60 @@
-@import
-url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
 body {
-  background: #272727;
-  font-family: "Montserrat", sans-serif;
-  color: #ffd868;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+    background-color: #04040D;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    font-family: Arial, sans-serif;
 }
 
-body2 {
-  font-family: "Lato", sans-serif;
-  background: #272727;
-
+.card {
+    background: #07071A;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.navMenu {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+.profile-container {
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
 
-.navMenu a {
-  color: #f6f4e6;
-  text-decoration: none;
-  font-size: 1.2em;
-  text-transform: uppercase;
-  font-weight: 500;
-  display: inline-block;
-  width: 80px;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+.profile-pic {
+    width: 80px;
+    border-radius: 10px;
 }
 
-.navMenu a:hover {
-  color: #fddb3a;
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.navMenu .dot {
-  width: 6px;
-  height: 6px;
-  background: #fddb3a;
-  border-radius: 50%;
-  opacity: 0;
-  -webkit-transform: translateX(30px);
-  transform: translateX(30px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+.footer {
+    font-size: 12px;
+    opacity: 0.5;
 }
 
-.navMenu a:nth-child(1):hover ~ .dot {
-  -webkit-transform: translateX(30px);
-  transform: translateX(30px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
+i {
+    color: white;
+    font-size: 30px;
+    margin: 7px; 
+    transition: 0.3s;
 }
 
-.navMenu a:nth-child(2):hover ~ .dot {
-  -webkit-transform: translateX(110px);
-  transform: translateX(110px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
+i:hover {
+    color: #53BDA7; 
 }
 
-.navMenu a:nth-child(3):hover ~ .dot {
-  -webkit-transform: translateX(200px);
-  transform: translateX(200px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
+h1 {
+  transition: 0.3s;
 }
 
-.navMenu a:nth-child(4):hover ~ .dot {
-  -webkit-transform: translateX(285px);
-  transform: translateX(285px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.display-date {
-  text-align: center;
-  margin-bottom: 10px;
-  font-size: 1.6rem;
-  font-weight: 600;
-}
-
-.display-time {
-  display: flex;
-  font-size: 5rem;
-  font-weight: bold;
-  border: 2px solid #ffd868;
-  padding: 10px 20px;
-  border-radius: 5px;
-  transition: ease-in-out 0.1s;
-  transition-property: background, box-shadow, color;
-  -webkit-box-reflect: below 2px
-    linear-gradient(transparent, rgba(255, 255, 255, 0.05));
-}
-
-.display-time:hover {
-  background: #ffd868;
-  box-shadow: 0 0 30px#ffd868;
-  color: #272727;
-  cursor: pointer;
+h1:hover {
+  color: #53BDA7;
 }
