--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #04040D;
+    background-color: #04040D;  /* Website background */
     color: white;
     display: flex;
     justify-content: center;
@@ -9,24 +9,25 @@ body {
 }
 
 .card {
-    background: #07071A;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: left;
+    background: #07071A;  /* Card background */
+    padding: 30px;
+    border-radius: 12px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .profile-container {
-    display: flex;
+    display: flex; 
     align-items: center;
     gap: 15px;
+    width: 100%;
 }
 
 .profile-pic {
-    width: 80px;
-    border-radius: 10px;
+    width: 125px; /* Adjust size */
+    border-radius: 5px;
+    object-fit: cover;
 }
 
 .info {
@@ -35,20 +36,19 @@ body {
     justify-content: center;
 }
 
-.footer {
-    font-size: 12px;
-    opacity: 0.5;
+.icons {
+    display: flex;
+    gap: 14px;
 }
 
-i {
+.icons a {
     color: white;
-    font-size: 30px;
-    margin: 7px; 
+    font-size: 24px;
     transition: 0.3s;
 }
 
-i:hover {
-    color: #53BDA7; 
+.icons a:hover {
+    color: #53BDA7;
 }
 
 h1 {
